--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"date-fns": "^2.2.1",
 		"graphql": "^14.5.5",
 		"graphql-tag": "^2.10.1",
+		"immer": "^5.3.6",
 		"jwt-decode": "^2.2.0",
 		"moment": "^2.24.0",
 		"react": "^16.9.0",
